<resources>
    <string name="app_name">GroceryGo</string>
    <string name="grocery_go">Grocery Go</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_home">Home</string>
    <string name="label_explore">Explore</string>
    <string name="label_orders">Orders</string>
    <string name="label_settings">Settings</string>
</resources>