<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">


    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.grocerygo.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_fragment_explore_to_explore"
            app:destination="@id/exploreFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_fragment_explore_to_orders"
            app:destination="@id/ordersFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />


        <action
            android:id="@+id/action_fragment_explore_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.example.grocerygo.ui.categories.ExploreFragment"
        android:label="@string/label_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.grocerygo.ui.orders.OrdersFragment"
        android:label="@string/label_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.grocerygo.ui.settings.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_orders" />

</navigation>